# image_format

./: CMakeLists.txt  CR2toFITS.c  CR2toFITS.h  CR2tomov.c  FITS_to_floatbin_lock.c  FITS_to_floatbin_lock.h  FITS_to_ushortintbin_lock.c  FITS_to_ushortintbin_lock.h  FITStorgbFITSsimple.c  FITStorgbFITSsimple.h  README.md  combineHDR.c  extract_RGGBchan.c  extract_RGGBchan.h  extract_utr.c  extract_utr.h  image_format.c  image_format.h  imtoASCII.c  imtoASCII.h  loadCR2toFITSRGB.c  loadCR2toFITSRGB.h  milkimageformat.pc.in  readPGM.c  readPGM.h  read_binary32f.c  read_binary32f.h  stream_temporal_stats.c  stream_temporal_stats.h  writeBMP.c  writeBMP.h
tests/: utr_test.sh  utr_test_python_feed.py
